--- a/Gell/src/app.rc
+++ b/Gell/src/app.rc
@@ -1,4 +1,4 @@
-id ICON "app.ico"
+id ICON "swords.ico"
 1 VERSIONINFO
 FILEVERSION     1,0,0,0
 PRODUCTVERSION  1,0,0,0
@@ -8,7 +8,7 @@ BEGIN
     BLOCK "080904E4"
     BEGIN
       VALUE "CompanyName", "BOBS inc."
-      VALUE "FileDescription", "FileManager"
+      VALUE "FileDescription", "---"
       VALUE "FileVersion", "1.0"
       VALUE "InternalName", "gell"
       VALUE "LegalCopyright", "Ilya Bobkov"
