--- a/Gell/.settings/org.eclipse.core.resources.prefs
+++ b/Gell/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/Obj.cpp=UTF-8
+encoding//src/Player.h=UTF-8
 encoding//src/gell.cpp=UTF-8
 encoding//src/imglib.cpp=UTF-8
