--- a/Gell/.settings/org.eclipse.core.resources.prefs
+++ b/Gell/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,5 @@ eclipse.preferences.version=1
 encoding//src/Font.cpp=UTF-8
 encoding//src/Gell.cpp=UTF-8
 encoding//src/ObjMesh.cpp=UTF-8
+encoding//src/Shader.cpp=UTF-8
+separateDerivedEncodings=true
