--- a/Gell/src/Res/app.rc
+++ b/Gell/src/Res/app.rc
@@ -1,3 +1,6 @@
+#include <windows.h>
+#include "resource.h"
+
 id ICON "swords.ico"
 1 VERSIONINFO
 FILEVERSION     1,0,0,0
@@ -21,4 +24,12 @@ BEGIN
   BEGIN
     VALUE "Translation", 0x809, 1252
   END
+END
+
+AboutDialog DIALOG 400, 200, 188, 95
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+CAPTION "Степь"
+FONT 8, "MS Shell Dlg"
+BEGIN
+    DEFPUSHBUTTON   "OK", IDOK, 19, 26, 174, 25
 END
